<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sp"
    android:gravity="top"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/helloworld"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFFFF"
        android:textIsSelectable="false"
        android:textSize="30dp"
        android:layout_alignParentTop="false"
        android:layout_alignParentEnd="false"
        android:textStyle="bold|italic"
        android:layout_alignParentLeft="false"
        android:layout_alignWithParentIfMissing="false"
        android:layout_alignParentRight="false"
        android:layout_alignParentBottom="false"
        android:gravity="center_horizontal"

        />

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/mynet"
        android:textColor="#0000ff"
        android:textStyle="bold"
        android:background="#ffffff"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        android:layout_marginTop="25dp"
        android:text="@string/hürriyet"
        android:textColor="#ee0000"
        android:textStyle="bold"
        android:background="#ffffff"
        />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/milliyet"
        android:textColor="#548B54"
        android:textStyle="bold"
        android:background="#ffffff"
        />
      <Button
          android:id="@+id/button4"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_below="@+id/button3"
          android:layout_centerHorizontal="true"
          android:layout_marginTop="25dp"
          android:text="@string/haber"
          android:textColor="#912cee"
          android:textStyle="bold"
          android:background="#ffffff"
          />

       <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/sözcü"
        android:textColor="#666666"
        android:textStyle="bold"
        android:background="#ffffff"
           />

    <Button
        android:id="@+id/button6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/shift"
        android:textColor="#A0522D"
        android:textStyle="bold"
        android:background="#ffffff"

        />

    <Button
        android:id="@+id/button7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button6"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/bursa"
        android:textColor="#20B2AA"
        android:textStyle="bold"
        />


</RelativeLayout>